# c-datastructures

./: .clang-format  .gitignore  CMakeLists.txt  README.rst
.github/workflows/: cmake.yml
benchmarking/: CMakeLists.txt  avl-benchmark.c  benchmark.c  benchmark.h  rb-benchmark.c
cmake/: FindClangFormat.cmake  FindCoverage.cmake  FindFlawFinder.cmake  FindHtmlCoverage.cmake  FindValgrind.cmake
src/: CMakeLists.txt  min-max.h
src/avl-tree/: avl-tree.c  avl-tree.h  avl-tree.inc.h
src/red-black-tree/: red-black-tree.c  red-black-tree.h  red-black-tree.inc.h
test/: CMakeLists.txt  avl-tree-test.c  lib-test.c  red-black-tree-test.c
